--- a/scss/layout/_news.scss
+++ b/scss/layout/_news.scss
@@ -22,6 +22,10 @@
     font-size: 2.25rem;
     text-decoration: none;
 
+    @include breakpoint(medium-to-wide){
+        padding-bottom: 1.875rem;
+    }
+
 }
 
 .news__view-all {
@@ -92,6 +96,16 @@
     border-top: none;
     border-radius: 3px;
     box-shadow: 0 3px 35px rgba(0, 0, 0, .1);
+}
+
+#news2{
+    padding: 1.875rem;
+    padding-top: 1.875rem;
+    padding-bottom: 1.7rem;
+}
+
+#news3 {
+    padding-bottom: 1.43rem;
 }
 
 .news__card-title {
